@@ -675,9 +675,11 @@ sub _a_confirm {
 # Accepts four parameters: filename, approvals, the moderator group, the
 # number of moderators.  XXX Possibly allow the push of a bounce reason, or
 # can the whole moderator group thing.
+
+# XXX Note severe hack with 'unspooled_file'
 sub _a_consult {
   my ($self, $arg, $mj_owner, $sender, $list, $request, $requester,
-      $victim, $mode, $cmdline, $arg1, $arg2, $arg3) = @_;
+      $victim, $mode, $cmdline, $arg1, $arg2, $arg3, %extra) = @_;
   my $log = new Log::In 150, "$request";
   my ($file, $group, $size);
 
@@ -692,6 +694,7 @@ sub _a_consult {
 		 'cmdline'   => $cmdline,
 		 'approvals' => $arg || 1,
 		 'args'      => [$arg1, $arg2, $arg3],
+		 'unspooled_file' => $extra{'unspooled_file'},
 		);
 
   return (-1, $request eq 'post' ? 'ack_stall' : 'repl_consult');
